# for_task

./: pyproject.toml
new_project/: config.py  task.py
tests/: test_new_project.py
